--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,6 +9,11 @@ ru:
         restrict_dependent_destroy: 
           one: "Запись не может быть удалена, так как существует зависящая от него %{record}"
           many: "Запись не может быть удалена, так как существуют зависящие от него %{record}"
+  views:
+    pagination:
+      previous: "&lt; Previous"
+      next: "Next &gt;"
+      truncate: ". . . "
   date: 
     abbr_day_names: 
       - вс
